...
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#95b4de">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:layout_marginTop="72dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="2sp"
            android:autoSizeTextType="uniform"
...
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.537"/>

        <Button
            android:id="@+id/register"
            android:layout_width="140dp"
            android:layout_height="45dp"
            android:autoSizeMaxTextSize="18sp"
            android:autoSizeMinTextSize="2sp"
            android:autoSizeTextType="uniform"
            android:gravity="center"
...
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loginButton"
            app:layout_constraintVertical_bias="0.043" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="368dp"
            android:layout_height="191dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/plannus_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
...
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:startIconDrawable="@android:drawable/ic_dialog_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="Email"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress1"
            app:startIconDrawable="@android:drawable/ic_lock_lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passWord"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:background="@color/white"
                android:autoSizeTextType="uniform"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/black" />

        </com.google.android.material.textfield.TextInputLayout>


...
