<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backGroundColor"
    tools:context=".Activities.RegisterUser">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backGroundColor">

        <Button
            android:id="@+id/registerUser"
            android:layout_width="154dp"
            android:layout_height="48dp"
            android:layout_margin="8dp"
            android:autoSizeMaxTextSize="20sp"
            android:autoSizeMinTextSize="10sp"
            android:autoSizeTextType="uniform"
            android:text="@string/RegisterUser"
            android:backgroundTint="@color/button_colour"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password1"
            app:layout_constraintVertical_bias="0.079" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullName1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/FullName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registerUserLogo"
            app:startIconDrawable="@drawable/ic_baseline_person_24"
            style="@style/CustomTextInputStyleOutLinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="name"
                android:inputType="textPersonName"
                android:textColor="@color/black"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/age1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/RegisterAge"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fullName1"
            app:startIconDrawable="@drawable/ic_baseline_cake_24"
            style="@style/CustomTextInputStyleOutLinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="age"
                android:inputType="number"
                android:textColor="@color/black"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/RegisterEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/age1"
            app:startIconDrawable="@android:drawable/ic_dialog_email"
            style="@style/CustomTextInputStyleOutLinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="emailAddress"
                android:inputType="textEmailAddress"
                android:textColor="@color/black"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_marginTop="144dp"
            android:layout_marginEnd="25dp"
            android:layout_marginStart="25dp"
            android:hint="@string/Password"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email1"
            app:startIconDrawable="@android:drawable/ic_lock_lock"
            style="@style/CustomTextInputStyleOutLinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autoSizeMaxTextSize="18sp"
                android:autoSizeMinTextSize="2sp"
                android:autoSizeTextType="uniform"
                android:autofillHints="password"
                android:inputType="textPassword"
                android:textColor="@color/black"
                android:layout_marginEnd="25dp"
                android:layout_marginStart="25dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.74"
            tools:ignore="MissingConstraints" />

        <ImageView
            android:id="@+id/registerUserLogo"
            android:layout_width="357dp"
            android:layout_height="150dp"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_plannusnobg" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
